--- a/model8/ingress.yaml
+++ b/model8/ingress.yaml
@@ -16,7 +16,7 @@ spec:
           - path: "/"
             pathType: Prefix
             backend:
-              service:httpserver
-                name: 
+              service:
+                name: httpserver
                 port:
                   number: 80
